deployment/account/account-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: account-service
spec:
  selector:
    app: account-app
  ports:
    - protocol: TCP
      name: web
      port: 8082
      targetPort: 8082
  type: ClusterIP
