deployment/account/account.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: account-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: minikube
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: account-service
                port:
                  number: 8082
